update background image

--- a/mvp/app1/static/app1/style.css
+++ b/mvp/app1/static/app1/style.css
@@ -3,5 +3,5 @@ li a {
 }
 
 body {
-    background: wheat url("images/dipper.jpg") center no-repeat;
+    background: wheat url("images/moxie.jpg") center no-repeat;
 }
